# openscad-amu

./: .gitignore  Doxyfile.in  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  build.sh  clean.sh  config.h.in  configure  configure.ac  docs_home.dox  docs_start.dox  docs_topics.dox  update.sh
docs/: README.md  embedding.md  flow.md
docs/assets/: Makefile  embedding.scad  flow.dot  flow_intro.dot
examples/: Makefile.am  convert.bash.in  embedding_scheme.scad  hello_world.bash.in  log_segregate.bash.in  vehicle.doxyfile.in  vehicle.scad
share/: Makefile.am
share/amu_ext/: Makefile.am
share/dif_external/: Makefile.am  amu_list
share/examples/: Makefile.am  Makefile.in  animate.scad  convert.bash.in  embedding_scheme.dot  embedding_scheme.scad  hello_world.bash.in  log_segregate.bash.in  vehicle.doxyfile.in  vehicle.scad
share/functions/: Makefile.am  amu_date  amu_list
share/include/: Makefile.am  parallel_jobs.mk
share/include/mf/: Makefile.am  parallel_jobs.mk
share/include/mf/df/: Makefile.am
share/include/mf/df/df1/: Makefile.am  doxygen_variables  scopes_defaults
share/include/mfi/: Makefile.am  parallel_jobs.mk
share/include/mfs/: Makefile.am
share/include/mfs/lib/: Doxyfile.in  Makefile.am  amu_mfs_init.bash  docs_home.bash  make_makefile.bash  openscad_opts.bash  print.bash  print_textbox.bash  table.bash  utility.bash
share/include/mfs_library/: Doxyfile.in  Makefile.am  amu_mfs_init.bash  docs_home.bash  docs_library.bash  exception.bash  mainpage.bash  make_makefile.bash  openscad_opts.bash
share/include/mk/: Makefile.am  parallel_jobs.mk
share/include/mk/df/: Makefile.am  amu_pm_init  amu_pm_init.mk  amu_pm_rules  amu_pm_rules.mk
share/include/mk/df/df1/: Makefile.am  base_defaults.mk  base_functions  base_rules.mk  base_variables.mk  doxygen_defaults.mk  doxygen_functions.mk  doxygen_system.mk  groups_defaults.mk  groups_functions.mk  groups_rules.mk  groups_system.mk  groups_variables.mk  scopes_defaults.mk
share/include/pmf/: Makefile.am  amu_pm_init  amu_pm_rules
share/include/pmf/df1/: Makefile.am  base_constants  base_defaults  base_functions  base_rules  base_system  base_variables  doxygen_defaults  doxygen_functions  doxygen_rules  doxygen_system  doxygen_variables  scopes_defaults  scopes_functions  scopes_rules  scopes_system  scopes_variables
share/lib/: Doxyfile.in  Makefile.am  Makefile.in  bootloader.bash  doxygen_mainpage.bash  exception.bash  mainpage.bash  make_makefile.bash  openscad_opts.bash  print.bash  print_textbox.bash  table.bash  utility.bash
share/mk/: Makefile.am  Makefile.in  parallel_jobs.mk
share/scripts/: Doxyfile.in  Makefile.am  Makefile.in  bootstrap.bash  bootstrap.bash.in  bootstrap.conf  docs_home.bash.in  docs_scripts.bash.in  doxygen_mainpage.bash.in  mainpage.bash.in  segregate.bash.in  setup-amu.bash  setup-amu.conf
share/templates/: Makefile.am
share/templates/df1/: Doxyfile  Makefile.am  Project_Makefile.in  Project_Makefile.inl  design.scad  group.mk  library.scad
snapshots/: bootstrap.bash
src/: Doxyfile.in  Makefile.am  Makefile.in  bash_dif.dox  bash_dif_lexer.ll  docs_home.dox  docs_programs.dox  doxygen_mainpage.cpp  mainpage.dox  openscad_dif.dox  openscad_dif_lexer.ll  openscad_dif_main.cpp  openscad_dif_scanner.cpp  openscad_dif_scanner.hpp  openscad_dif_scanner_bif.cpp  openscad_dif_scanner_bif1.cpp  openscad_dif_scanner_bif2.cpp  openscad_dif_scanner_bif3.cpp  openscad_dif_scanner_bif4.cpp  openscad_dif_scanner_bif5.cpp  openscad_dif_scanner_bif_if.cpp  openscad_dif_util.cpp  openscad_dif_util.hpp  openscad_seam.dox  openscad_seam_lexer.ll  openscad_seam_main.cpp  openscad_seam_scanner.cpp  openscad_seam_scanner.hpp  openscad_seam_scope.hpp
tests/: Makefile.am  Makefile.in  test.bash  test1.bash  test1.scad  test2.scad  test3.scad  test4.scad
