##############################################################################
#
# top_srcdir
#
##############################################################################

ACLOCAL_AMFLAGS = -I m4

# src should be build first
SUBDIRS = \
	src \
	share \
	tests

EXTRA_DIST = \
	autogen.sh \
	README.md

##############################################################################
# targets
##############################################################################

##############################################################################
# eof
##############################################################################
